# info-center

./: .gitignore  Dockerfile  init.py  main.py  pyproject.toml
.github/actions/notify/: action.yml
.github/workflows/: docker-aliyun.yml
ai/: agent_runner.py
config/: database.py  mongo.py  redis.py
dao/: city_curd.py  mongo_curd.py
entity/: city_info.py  common.py  weather_archive.py
k8s/: stack.yaml
scrap/: weather_info.py
service/ai/: agent_runner.py  deepseek.py
service/monitor/: monitor.py
service/scrap/: weather_info.py
